--- a/eventos.css
+++ b/eventos.css
@@ -83,9 +83,10 @@
 
 
         footer {
-            background-color: rgb(63, 63, 63);
-            padding: 10px;
-        }
+        background-image: linear-gradient(#535353a4,#000000);
+        /*background-color: rgb(63, 63, 63);*/
+        padding: 10px;
+    }
 
         .footer-info {
             display: flex;
@@ -146,5 +147,8 @@
 
             }
         }
+        .navbar {
+        background-image: linear-gradient(#535353a4,#000000);
+    }
 
     
